[metadata]
name = kb
version = 0.0.1
author = Kirill Lyndin
author_email = kirill.lyndin@gmail.com
description = a project to work with graphs enriched with embeddings and images
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    annoy==1.17.0
    matplotlib==3.3.2
    rdflib==5.0.0
    numpy==1.19.2

[options.packages.find]
where = src

[dependencies]
